# nn-Scratch

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  contributing.md  license.md  pyproject.toml  readme.md  setup.py  test_autograd  test_basic_nn.py  test_complete_training.py  test_nn.py  test_simple.py  test_step_by_step.py  test_tensor
.github/workflows/: cpp_lint.yaml
cmake/: StaticAnalyzers.cmake  torchscratch-config.cmake.in
examples/basic/: simple_tensor_operations.py
include/core/: tensor.h
include/core/autograd/: function.h  variable.h
include/core/nn/: activation.h  linear.h  loss.h
include/core/optim/: sgd.h
include/core/tensor/: ops.h  tensor.h  tensor_impl.h
python/torchscratch/: __init__.py
python/torchscratch/nn/: __init__.py
python/torchscratch/optim/: __init__.py
reports/: cppcheck_report.txt
scripts/: build.sh  dev.sh  dev_setup.sh  format_cpp.sh  lint_cpp.sh  run_cpp_lint.sh
src/core/autograd/: engine.cpp
src/core/nn/: activation.cpp  linear.cpp  loss.cpp
src/core/optim/: sgd.cpp
src/core/tensor/: ops.cpp  tensor.cpp  tensor_impl.cpp
src/python/: module.cpp  nn.cpp  optim.cpp  tensor.cpp
test/cpp/autograd/: test_autograd.cpp
test/cpp/tensor/: test_tensor.cpp
