[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.17",
]
build-backend = "setuptools.build_meta"

[project]
name = "torchscratch"
version = "0.1.0"
description = "A PyTorch-like library built from scratch for educational purposes"
readme = "readme.md"
requires-python = ">=3.7"
license = {file = "license.md"}
authors = [
    {name = "TorchScratch Team", email = "your.email@example.com"}
]
maintainers = [
    {name = "TorchScratch Team", email = "your.email@example.com"}
]
keywords = ["deep-learning", "machine-learning", "pytorch", "tensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
homepage = "https://github.com/yourusername/torchscratch"
documentation = "https://torchscratch.readthedocs.io"
repository = "https://github.com/yourusername/torchscratch"
changelog = "https://github.com/yourusername/torchscratch/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["test/python"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88